style: remove decorative double border from quran display

--- a/index.html
+++ b/index.html
@@ -285,10 +285,8 @@
 
             <!-- Quran Text Display -->
             <div class="quran-page bg-[#fdfbf7] text-slate-800 shadow-2xl relative overflow-hidden">
-                <!-- Decorative Frame -->
-                <div
-                    class="absolute inset-0 border-[12px] border-double border-[#e5e7eb]/50 pointer-events-none rounded-xl">
-                </div>
+                <!-- Decorative Frame Removed -->
+
                 <div id="quranContainer" class="quran-text relative z-10 p-2 md:p-4"></div>
             </div>
         </div>
