Fix visible ayah numbers: restore position relative to marker

--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
             display: inline-flex;
             align-items: center;
             justify-content: center;
+            position: relative;
             vertical-align: middle;
             user-select: none;
         }
